# comp_graph_basics

./: .clang-format  CMakeLists.txt  README.md
modules/asset/: CMakeLists.txt
modules/asset/src/: MeshLoader.cpp
modules/common/: CMakeLists.txt
modules/common/inc/common/: Average.h  Error.h  Math.h  MemUtils.h  TimeProfiler.h
modules/common/src/: Math.cpp
modules/common/test/: AverageTest.cpp  MathTest.cpp
modules/core/: CMakeLists.txt
modules/core/inc/core/: AmbientLight.h  Angle.h  BasicTypes.h  BlinnPhong.h  Camera.h  Color.h  DirectionalLight.h  Light.h  LineEquation2d.h  Material.h  Mesh.h  MeshData.h  Movable.h  OrthogonalCamera.h  PerspectiveCamera.h  PointLight.h  Ray.h  Rotatable.h  Rotation.h  Scalable.h  Scene.h  ShaderGroup.h  Shape.h  Sphere.h  StaticMesh.h  TransformUtils.h  Transformable.h
modules/core/src/: BlinnPhong.cpp  Camera.cpp  DirectionalLight.cpp  Mesh.cpp  OrthogonalCamera.cpp  PerspectiveCamera.cpp  PointLight.cpp  Scene.cpp  Sphere.cpp
modules/core/test/: AmbientLightTest.cpp  AngleTest.cpp  BlinnPhongTest.cpp  CameraTest.cpp  ColorTest.cpp  DirectionalLightTest.cpp  MeshTest.cpp  OrthogonalCameraTest.cpp  PerspectiveCameraTest.cpp  PointLightTest.cpp  RotationTest.cpp  SphereTest.cpp  TestUtils.cpp  TestUtils.h  TransformUtilsTest.cpp  TransformableTest.cpp
modules/core/test/inc/core/: TestUtils.h
modules/core/test/src/: TestUtils.cpp
modules/core/test/tests/: AngleTest.cpp  BlinnPhongTest.cpp  CameraTest.cpp  ColorTest.cpp  DirectionalLightTest.cpp  LineEquation2dTest.cpp  MeshTest.cpp  OrthogonalCameraTest.cpp  PerspectiveCameraTest.cpp  PointLightTest.cpp  RayTest.cpp  ShapeTest.cpp  SphereTest.cpp  TransformUtilsTest.cpp  TransformableTest.cpp
modules/mesh/: CMakeLists.txt
modules/mesh/inc/mesh/: MeshGenerator.h  MeshLoader.h
modules/mesh/src/: MeshGenerator.cpp  MeshLoader.cpp
modules/mesh/test/: MeshGeneratorTest.cpp
modules/rasterizer/: CMakeLists.txt
modules/rasterizer/inc/rasterizer/: BackFaceCuller.h  Clipper.h  DeptBuffer.h  DepthBuffer.h  MemoryColorBuffer.h  PlaneIntersect.h  RasterizerRenderer.h  RasterizerRendererParallel.h  RasterizerShaders.h  TriangleRasterizer.h
modules/rasterizer/inc/shader/: MeshShapeShader.h  ShapeShader.h  SphereShapeShader.h
modules/rasterizer/src/: Clipper.cpp  DeptBuffer.cpp  DepthBuffer.cpp  MemoryColorBuffer.cpp  MeshShapeShader.cpp  RasterizerRenderer.cpp  RasterizerRendererParallel.cpp  SphereShapeShader.cpp
modules/rasterizer/test/: BackFaceCullerTest.cpp  ClipperTest.cpp  DepthBufferTest.cpp  MemoryColorBufferTest.cpp  PlaneIntersectTest.cpp  TriangleRasterizerTest.cpp
modules/ray_tracer/: CMakeLists.txt
modules/ray_tracer/inc/: RayTraceRenderer.h
modules/ray_tracer/inc/hit/: HitDetector.h  MeshHitDetector.h  SphereHitDetector.h
modules/ray_tracer/inc/ray_tracer/: RayTraceRenderer.h  RayTracerShaders.h
modules/ray_tracer/src/: Main.cpp  MeshHitDetector.cpp  RayTraceRenderer.cpp  SdlScreen.cpp  SphereHitDetector.cpp
modules/ray_tracer/test/: MeshHitDetectorTest.cpp  SphereDetectorTest.cpp
modules/renderer/: CMakeLists.txt
modules/renderer/inc/renderer/: Renderer.h  Screen.h
modules/renderer_app/: CMakeLists.txt
modules/renderer_app/inc/: RasterizerShaderFactory.h  RayTracerShaderFactory.h  SdlScreen.h  ShapeFactory.h
modules/renderer_app/src/: Main.cpp  RayTracerShaderFactory.cpp  SdlScreen.cpp
modules/screen/: CMakeLists.txt
modules/screen/inc/screen/: Screen.h  SdlScreen.h
modules/screen/src/: SdlScreen.cpp
modules/task/: CMakeLists.txt
modules/task/inc/task/: MessageQueue.h  Task.h  TaskGraph.h  ThreadPool.h
modules/task/src/: ThreadPool.cpp
modules/task/test/: MessageQueueTest.cpp  TaskGraphTest.cpp  ThreadPoolTest.cpp
modules/test_utils/: CMakeLists.txt
modules/test_utils/inc/test_utils/: Utils.h
modules/test_utils/src/: Utils.cpp
